@@ -1,6 +1,7 @@
 NEW IN VERSION 1.3
 
 - Added "save" command
+- Added "delete", "ls" and "revert" commands.
 
 NEW IN VERSION 1.2
 
@@ -79,4 +80,4 @@ NEW IN VERSION 0.7
 
 - Add tdlg to do log as a single command name.
 
-$Header: /cvs/src/tdl/NEWS,v 1.8 2003/03/04 20:47:12 richard Exp $
+$Header: /cvs/src/tdl/NEWS,v 1.9 2003/03/06 22:53:24 richard Exp $
